# Z80emu

./: .gitignore  Bus.cpp  Bus.hpp  CMakeLists.txt  Load.cpp  Pop.cpp  Push.cpp  README.md  Test.cpp  Test.hpp  main.cpp  z80.cpp  z80.hpp
instructions/: Add.cpp  Add.hpp  And.cpp  And.hpp  Bit.cpp  Bit.hpp  Compare.cpp  Compare.hpp  Dec.cpp  Dec.hpp  Exchange.cpp  Exchange.hpp  Inc.cpp  Inc.hpp  InstructionTable.cpp  InstructionTable.hpp  Jump.cpp  Jump.hpp  Load.cpp  Load.hpp  Misc.cpp  Misc.hpp  Or.cpp  Or.hpp  Pop.cpp  Pop.hpp  Push.cpp  Push.hpp  Reset.cpp  Reset.hpp  Rotate.cpp  Rotate.hpp  Set.cpp  Set.hpp  Shift.cpp  Shift.hpp  Sub.cpp  Sub.hpp  Xor.cpp  Xor.hpp
test-cases/: DAA_test.cpp  DAA_test.hpp  LD_test.cpp  LD_test.hpp  add_test.cpp  add_test.hpp  arithmetic_test.cpp  arithmetic_test.hpp  compare_test.cpp  compare_test.hpp  exchange_test.cpp  exchange_test.hpp  push_pop_test.cpp  push_pop_test.hpp  rotate_test.cpp  rotate_test.hpp  test_add.cpp  test_bit.cpp  test_functions.cpp  test_inc.cpp  test_jump.cpp  test_load.cpp  test_main.cpp  test_main.hpp  test_reset.cpp  test_rotate.cpp  test_set.cpp  test_shift.cpp
